fix: Overflow scroll in code blocks

--- a/assets/_sass/_blog.scss
+++ b/assets/_sass/_blog.scss
@@ -32,4 +32,7 @@ article {
 		justify-content: space-between;
 		align-items: center;
 	}
+    .post-content {
+        max-width: 100%;
+    }
 }
